# liquid-nn

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
configs/: base.yaml  colab_t4.yaml  large.yaml  small.yaml
data/: loader.py
docs/: architecture.md
liquidnn/: __init__.py  attention.py  distillation.py  ffn.py  model.py  moe.py  neuromodulation.py  ode_cell.py  plasticity.py  quantize.py  rmsnorm.py  tokenizer.py  utils.py
notebooks/: colab_demo_v034.py  colab_train_2h.py
scripts/: generate.py  plasticity_test.py  train.py
tests/: test_energy.py  test_model.py  test_ode_cell.py  test_optimizations.py  test_plasticity.py  test_speculative.py  test_training_quick.py  test_v031.py  test_v032.py  test_v033.py  test_v034.py  test_v035.py
