[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "liquidnn"
version = "0.1.0"
description = "Liquid Neural Network Language Model with Hebbian Plasticity"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
